@@ -23,6 +23,8 @@ import java.io.ByteArrayOutputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.FileVisitOption;
 import java.nio.file.FileVisitResult;
@@ -38,6 +40,8 @@ import java.util.List;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.zip.ZipEntry;
@@ -201,10 +205,10 @@ public class Extras {
             // Java 8 version of the below block: version = Extras.class.getPackage().getImplementationVersion();
             // Since Java 9 and the advent of modules, information from manifest aren't loaded anymore and so a workaround is needed
             String res = Extras.class.getResource(Extras.class.getSimpleName() + ".class").toString();
-            URL url = new URL(res.substring(0, res.length() - (Extras.class.getName() + ".class").length()) + JarFile.MANIFEST_NAME);
+            URL url = new URI(res.substring(0, res.length() - (Extras.class.getName() + ".class").length()) + JarFile.MANIFEST_NAME).toURL();
             Manifest manifest = new Manifest(url.openStream());
             version = manifest.getMainAttributes().getValue(Attributes.Name.IMPLEMENTATION_VERSION);
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             // swallow errors
         }
         Path defaultDocumentPath = Paths.get(".", String.format(wantedFilenameMask, version));
